# Video_processor_node

./: CMakeLists.txt  README.md  package.xml
config/: video_params.yaml
include/video_processor/: video_processor_node.hpp
launch/: video_processor.launch.py
src/: video_processor_node.cpp
